--- a/gb/25/11/13/n14635295.md
+++ b/gb/25/11/13/n14635295.md
@@ -15,12 +15,18 @@
 <p>他还透露，他在ITV上表达自己的想法后，收到了来自世界各地的信息，对他表示赞同。◇</p>
 <p>责任编辑：陈彬</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612940.md#1">英国经济显着放缓 财政大臣为加税铺路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612960.md#1">英国要求外国政府代理人登记 否则坐牢两年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14613046.md#1">英国学生贷款是怎么回事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617550.md#1">英国记者暗访 揭秘被盗手机中转商店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617700.md#1">英国再推迟对中共超级大使馆规划裁决</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630780.md#1">英国政府加税目标：房产、个人收入、养老金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630787.md#1">英国政府计划修建12座新城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630794.md#1">英国：为什么能源固定费用六年涨价两倍 ？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630797.md#1">英国190万旧能源账户藏2.4亿镑惊喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/11/n14633965.md#1">英国最大洗钱案 中国主犯被判近12年重刑</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
