--- a/gb/25/12/4/n14648895.md
+++ b/gb/25/12/4/n14648895.md
@@ -23,12 +23,18 @@
 <p>工党也被指责为虚伪，因为拉米和首相斯塔默之前都支持陪审团审判。斯塔默在年轻时曾呼吁将陪审团审判扩展到所有刑事案件。</p>
 <p>责任编辑：麦蕾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617700.md#1">英国再推迟对中共超级大使馆规划裁决</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626833.md#1">英国安德鲁王子被褫夺头衔 遭逐出王室住所</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630777.md#1">英国持刀伤人案11人受伤 铁路安全引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630780.md#1">英国政府加税目标：房产、个人收入、养老金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630787.md#1">英国政府计划修建12座新城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630794.md#1">英国：为什么能源固定费用六年涨价两倍 ？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635278.md#1">英国或对电动车收税 每英里3p</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644382.md#1">英国财政大臣公布预算 加税260亿镑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644416.md#1">英国移民制度改革 高收入者三年获永居</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644418.md#1">英国警方：俄罗斯洗钱团伙活动猖獗</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
