--- a/gb/25/11/13/n14635291.md
+++ b/gb/25/11/13/n14635291.md
@@ -17,12 +17,18 @@
 <p>责任编辑：麦蕾</p>
 <p>&nbsp;</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612953.md#1">英国保守党承诺5年遣返75万非法移民</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612960.md#1">英国要求外国政府代理人登记 否则坐牢两年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14613046.md#1">英国学生贷款是怎么回事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614901.md#1">英国侨学界欢庆中华民国114年国庆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617550.md#1">英国记者暗访 揭秘被盗手机中转商店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617700.md#1">英国再推迟对中共超级大使馆规划裁决</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630780.md#1">英国政府加税目标：房产、个人收入、养老金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630787.md#1">英国政府计划修建12座新城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630794.md#1">英国：为什么能源固定费用六年涨价两倍 ？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/6/n14630797.md#1">英国190万旧能源账户藏2.4亿镑惊喜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
