--- a/gb/22/5/21/n13742243.md
+++ b/gb/22/5/21/n13742243.md
@@ -7,7 +7,7 @@
 <hr>
 <p>【大纪元2022年05月21日讯】（大纪元特约记者林一山报导）2020年6月30日，中共人大常委会通过了《港区国安法》，香港众志宣布解散。随后，前立法会议员罗冠聪流亡英国，成员黄之锋和袁嘉蔚身陷囹圄，周庭出狱后仍有其它案件在身。今年4月，前香港众志副主席郑家朗宣布已抵达英国，在接受大纪元专访时分享离港的感受，并透露与团队撰写了《太平岛保卫战》教材，教育香港的下一代民主体制及普世价值。</p>
 <p>当被问及是否适应英国生活的时候，郑家朗坦言伦敦对他来说不难适应，因为他可以重新感受到“香港”。例如，有很多成熟的香港人群体在伦敦，他亦遇到不少以前的战友，再加上有很多香港人组织在不同位置上努力，“反而我来到英国，能够重新感受‘香港’，尤其是‘香港’现时已经不是以前的‘香港’，就算返到去名义上的‘香港’，也未必找到以前的‘香港’，反而英国有更多‘香港’的事物，例如以前可以享有的自由气息，大家可以自由自在地讨论，不用担心将来被捕”。</p>
-<p><a loading="lazy" width="640" b="360" data2-src=""></a><a href="https://d3asbsenpgs1fq.cloudfront.net/Q6vbUuZ1p"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/P2n4Xf_6ypk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><a loading="lazy" width="640" b="360" data2-src=""></a><a href="https://dlph7fabhsbfp.cloudfront.net/T8zbUuZ1u"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/P2n4Xf_6ypk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <h2>教材套让小朋友反思身份认同</h2>
 <p>从去年年中开始，郑家朗联同过去于倡议教育政策时结识的伙伴组成团队，为海外香港人度身订造教材。团队成员包括香港教师、教育政策倡议者、新闻工作者、社工、插画师以及剧场人。他们在过去一段时间不计劳苦，跨越超过11小时的时差，与郑家朗一同撰写了这套教材，为了保留让下一代自由思考、了解真相的权利。这套教材包含一套六册连载故事，并附有三套桌上游戏，适合7岁至12岁的小朋友。</p>
 <p>郑家朗期望，教材套能够让香港人的下一代反思自己的身份认同，以及对香港历史或过去发生的事件有基本认识。他透露有团队成员本身是教师，也是家长，担心自己的孩子在未来接受到“洗脑”教育，所以冒着不少风险也加入团队制作教材。</p>
@@ -17,12 +17,12 @@
 <p>郑家朗在帖文中表示，独自一人离乡生活要面对许多挑战，但在英国经历的不只是难处，他亦从当地港人社群中重新得力，“即使身体与香港远隔重洋，但感觉仍仿似回到家中，是因为有香港人的地方就是香港”。这段日子，他都有反思自己在外面有何岗位，如何为香港及海外港人社群作贡献。他又透露，过去一年他曾到不同学校讲课，透过讲述香港的议题来强调人权的重要性，并将香港的故事传得更远，有许多学生甚至当场哭了起来。</p>
 <p>责任编辑：陈彬#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/6/n11027279.md#1" target="_blank">孙盛起：总会有无畏的勇士记录历史的真实</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
